Fix spacing around images in about page

--- a/_scss/components/_blurbs.scss
+++ b/_scss/components/_blurbs.scss
@@ -100,11 +100,11 @@ $blurb-spacing: $media-spacing;
   }
 
   img.left {
-    margin: 10px 20px 20px 0;
+    margin: 0 $blurb-spacing $blurb-spacing 0;
     max-width: 38.2%;
 
     + p {
-      margin-top: 10px;
+      margin-top: $blurb-spacing;
     }
   }
 
